modal z-index fix

--- a/public-app/src/styles.scss
+++ b/public-app/src/styles.scss
@@ -93,6 +93,10 @@ h6{
   max-width: 1000px;
 }
 
+.cdk-overlay-container{
+  z-index: 5000;
+}
+
 .table{
   color:inherit;
 }
